--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,14 @@
 spring:
   #  配置数据源信息
   datasource:
-    # 配置数据源类型
-    type: com.zaxxer.hikari.HikariDataSource
     # 配置连接数据库的信息
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/onebox?serverTimezone=GMT%2B8&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/onebox?characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: 12345678
+  #
+  servlet:
+    multipart:
+      # 配置上传文件的大小限制
+      max-file-size: 10MB
+      max-request-size: 100MB
