--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,10 @@ spring:
     url: jdbc:mysql://localhost:3306/onebox?characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: 12345678
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
   #
   servlet:
     multipart:
