--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!--引入 mybatis-spring-boot-starter 的依赖-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
         <!-- 工具类 -->
         <dependency>
             <groupId>cn.hutool</groupId>
