--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,8 @@ spring:
       # 配置上传文件的大小限制
       max-file-size: 10MB
       max-request-size: 100MB
+mybatis:
+  mapper-locations: classpath:mapper/*.xml  #指定 mapper.xml 的位置
+  type-aliases-package: com.turing.onebox.common.model.dto      #扫描实体类的位置,在此处指明扫描实体类的包，在 mapper.xml 中就可以不写实体类的全路径名
+  configuration:
+    map-underscore-to-camel-case: true              #默认开启驼峰命名法，可以不用设置该属性
