--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
     username: root
     password: 12345678
   mvc:
+    # 配置RESTFUL风格需要的发送请求方式
     hiddenmethod:
       filter:
         enabled: true
@@ -17,7 +18,10 @@ spring:
       max-file-size: 10MB
       max-request-size: 100MB
 mybatis:
-  mapper-locations: classpath:mapper/*.xml  #指定 mapper.xml 的位置
-  type-aliases-package: com.turing.onebox.common.model.dto      #扫描实体类的位置,在此处指明扫描实体类的包，在 mapper.xml 中就可以不写实体类的全路径名
+  #指定 mapper.xml 的位置
+  mapper-locations: classpath:mapper/*.xml
+  #扫描实体类的位置
+  type-aliases-package: com.turing.onebox.common.model.dto
   configuration:
-    map-underscore-to-camel-case: true              #默认开启驼峰命名法，可以不用设置该属性
+    #开启驼峰命名法
+    map-underscore-to-camel-case: true
