--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
         <version>2.7.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.truing</groupId>
+    <packaging>war</packaging>
+    <groupId>com.turing</groupId>
     <artifactId>onebox</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>onebox</name>
@@ -16,6 +17,8 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -37,6 +40,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <!--mybatis相关依赖-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.2.2</version>
         </dependency>
 
         <!-- 数据库相关 -->
@@ -63,6 +72,17 @@
     </dependencies>
 
     <build>
+        <!--将java源文件中的xml文件编译输出在target的类路径中-->
+        <resources>
+            <resource>
+                <!--将src/main/java下的·····-->
+                <directory>src/main/java</directory>
+                <includes>
+                    <!--java下的所有的子包下的任意的xml文件-->
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
