--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/onebox?characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false&allowPublicKeyRetrieval=true
     username: root
-    password: 12345
+    password: 12345678
   mvc:
     # 配置RESTFUL风格需要的发送请求方式
     hiddenmethod:
@@ -17,8 +17,8 @@ spring:
   servlet:
     multipart:
       # 配置上传文件的大小限制
-      max-file-size: 10MB
-      max-request-size: 100MB
+      max-file-size: 10GB
+      max-request-size: 20GB
 mybatis:
   #指定 mapper.xml 的位置
   mapper-locations: classpath:mapper/*.xml
