--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -19,7 +19,7 @@ spring:
     #数据库的用户名(你使用的数据库）
     username: root
     #密码
-    password: 12345
+    password: 53231323
   mvc:
     #配置RESTFUL风格需要的发送请求方式的配置
     hiddenmethod:
@@ -28,8 +28,8 @@ spring:
   servlet:
     #文件上传大小设置
     multipart:
-      max-file-size: 10MB
-      max-request-size: 100MB
+      max-file-size: 10GB
+      max-request-size: 20GB
 
 mybatis:
   #mapper文件映射位置:类路径下的·····
