--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,37 +1,3 @@
 spring:
-  #web:
-  #  resources:
-  #    static-locations: classpath:/static/
-  #  profiles:
-
-  #  配置数据源信息
-  datasource:
-    # 配置连接数据库的信息
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/onebox?characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false&allowPublicKeyRetrieval=true
-    username: root
-    password: 12345
-  mvc:
-    # 配置RESTFUL风格需要的发送请求方式
-    hiddenmethod:
-      filter:
-        enabled: true
-  #
-  servlet:
-    multipart:
-      # 配置上传文件的大小限制
-      max-file-size: 10GB
-      max-request-size: 20GB
-mybatis:
-  #指定 mapper.xml 的位置
-  mapper-locations: classpath:mapper/*.xml
-  #扫描实体类的位置
-  type-aliases-package: com.turing.onebox.common.model.dto
-  configuration:
-    #开启驼峰命名法
-    map-underscore-to-camel-case: true
-
-huang:
-  file:
-    upload:
-      path: E:\cahe\ #上传的文件存储路径
+  profiles:
+    active: dev
